# edinet-xbrl

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/edinet_xbrl/: __init__.py  client.py  parser.py  taxonomy.json
tests/: conftest.py  test_client.py  test_parser.py
